@@ -510,5 +510,13 @@ ___forms{}
 
 
 
+___unavailable_times_content{}
+
+#element-wrapper-days .checkbox-element {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+
 
 
